회원 서비스 레이어 정리, 카카오맵 API 사용
